compiler-core/src/parse/snapshots/gleam_core__parse__tests__parsing_bit_array_expression_with_invalid_size.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn wibble() {\n  let assert <<1:size(Upname)>> = todo\n}"
---
----- SOURCE CODE
pub fn wibble() {
  let assert <<1:size(Upname)>> = todo
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:29
  │
2 │   let assert <<1:size(Upname)>> = todo
  │                             ^ I was not expecting this

Found `)`, expected one of: 
- A variable name or an integer
